--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "dev": "bun run ./src/index.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^25.2.0",
+    "@types/pg": "^8.16.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "discord.js": "^14.25.1",
-    "ollama": "^0.6.3"
+    "dotenv": "^17.2.3",
+    "ollama": "^0.6.3",
+    "pg": "^8.18.0",
+    "prisma": "^7.3.0"
   }
 }
