--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "chalk": "^5.6.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "ollama": "^0.6.3",
